# cityseg

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: rye-test.yml  tag-release.yml  test-tag-release.yml
docs/: api_reference.md  getting_started.md  index.md
docs/api/: processors.md
docs/examples/: single-image-processing.ipynb
scripts/: dir_config.yaml  main.py  pipeline_test.py  run_segmentation.py
src/cityscape_seg/: __init__.py  config.py  config.yaml  exceptions.py  main.py  models.py  palettes.py  pipeline.py  pipelines.py  processors.py  sample_config.yaml  utils.py
src/cityseg/: __init__.py  config.py  config.yaml  exceptions.py  file_handler.py  main.py  palettes.py  pipeline.py  processing_plan.py  processors.py  segmentation_analyzer.py  utils.py  video_file_iterator.py  visualization_handler.py
tests/: test_config.py  test_file_handler.py  test_processing_plan.py  test_segmentation_analyzer.py  test_video_file_iterator.py  test_visualization_handler.py
