[project]
name = "cityseg"
version = "0.2.8"
description = "A flexible and efficient semantic segmentation pipeline for processing images and videos"
authors = [
    { name = "Andrew Mitchell", email = "mitchellacoustics15@gmail.com" }
]
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=4.43.2",
    "opencv-python>=4.10.0.84",
    "numpy>=2.0.1",
    "pillow>=10.4.0",
    "h5py>=3.11.0",
    "pandas[performance]>=2.2.2",
    "tqdm>=4.66.4",
    "pyyaml>=6.0.1",
    "scipy>=1.14.0",
    "loguru>=0.7.2",
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.5.30",
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.25.2",
    "nbconvert>=7.16.4",
    "black>=24.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter>=1.0.0",
    "pytest>=8.3.2",
    "rich[jupyter]>=13.7.1",
    "natten==0.17.1",
    "matplotlib>=3.9.1",
    "yappi>=1.6.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cityseg"]

